# AccelObserver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt
client/include/core/: clienttypes.h
client/include/crypto/: base64.h  sha1.h
client/include/misc/: conf_argparse.h  conf_print.h  conf_validator.h  help.h
client/include/network/: net_platform.h
client/include/sensor/: sensor_data_sim.h
client/include/transport/mqtt/: mqtt_client.h  mqtt_types.h
client/include/transport/websocket/: ws_client.h  ws_types.h
client/src/: main.c
client/src/crypto/: base64.c  sha1.c
client/src/misc/: conf_validator.c  help.c
client/src/network/: net_platform.c
client/src/sensor/: sensor_data_sim.c
client/src/transport/mqtt/: mqtt_client.c
client/src/transport/websocket/: ws_client.c
etc/gaccelserver/: gaccelserver.conf
server/: CMakeLists.txt  main.cpp
server/core/include/core/: core.h
server/core/include/core/common/: statuscode.h  systypes.h
server/core/include/core/config/: serverconfig.h
server/core/include/core/network/: networkstack.h
server/core/include/core/protocol/: transportprotocol.h
server/core/source/: statuscode.cpp
server/core/source/network/: networkstack.cpp
server/format/include/format/: iformatter.h
server/format/include/format/impl/: csvformatter.h
server/format/source/impl/: csvformatter.cpp
server/include/conf/: cliargsparser.hpp  confloader.hpp
server/include/core/: servertypes.hpp
server/include/crypto/: sha1.h
server/include/format/: iformatter.hpp
server/include/format/csv/: csv_formatter.hpp
server/include/logger/: logger.hpp
server/include/misc/: help.hpp  packet_validator.hpp  stats_analyzer.hpp
server/include/network/: net_platform.hpp
server/include/ringbuffer/: ringbuffer.hpp
server/include/sensor/: sensor_device.h
server/include/storage/: storage_manager.hpp
server/include/transport/: isubscriber.hpp
server/include/transport/mqtt/: mqtt_subscriber.hpp
server/include/transport/websocket/: ws_subscriber.hpp
server/include/webif/: web_interface.hpp
server/sctl/include/: ringbuffer.h
server/sctl/include/sctl/: ringbuffer.h
server/src/: main.cpp
server/src/conf/: cliargsparser.cpp  confloader.cpp
server/src/crypto/: sha1.c
server/src/format/csv/: csv_formatter.cpp
server/src/logger/: logger.cpp
server/src/misc/: help.cc  help.cpp  packet_validator.cpp  stats_analyzer.cpp
server/src/network/: net_platform.cpp
server/src/sensor/: sensor_device.c  sensor_device.h
server/src/storage/: storage_manager.cpp
server/src/transport/mqtt/: mqtt_subscriber.cpp
server/src/transport/websocket/: ws_subscriber.cpp
server/src/webif/: web_interface.cpp
server/storage/include/storage/: storagemanager.h
server/storage/source/: storagemanager.cpp
server/transport/include/transport/: itransport.h
server/transport/include/transport/impl/: websocket.h
shared/include/: confparser.h
